<?xml version="1.0"?>
<?xml-model href="http://download.ros.org" schematypens="http://www.w3.org"?>
<package format="3">
  <name>hoverboard_driver</name>
  <version>0.0.1</version>
  <description>Driver for hoverboard motors migrated to ROS 2</description>
  <maintainer email="road.and.track@gmail.com">road.and.track</maintainer>
  <license>BSD</license>

  <!-- ROS 2 Build Tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>control_toolbox</depend>
  
  <!-- Note: dynamic_reconfigure and rosparam_shortcuts are 
       usually handled by native ROS 2 parameters now -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
